cabal-version:      2.2
name:               start-servant
version:            0.1.0.0
category:           web
extra-source-files:
    README.md

common common-extensions
  default-language: Haskell2010
  default-extensions:
    StrictData
    MultiParamTypeClasses
    DerivingStrategies
    DerivingVia
    DeriveGeneric
    RecordWildCards
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    UndecidableInstances
    LambdaCase

-- Common language settings
common lang-settings
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wmissing-export-lists
    -fno-warn-missing-signatures
    -fno-warn-unused-do-bind

-- Dependencies common to both the exe and the lib.
-- This list can be "Extended" using explicit build-depends stanzas in the library or executable.
-- So far, I've omitted most version bounds, they can be generated using `nix-shell --run 'cabal freeze'`
common common-dependencies
  build-depends:
      base-noprelude >=4.7 && <5
    , protolude

    -- servant "core" (& server)
    , servant
    , servant-server

    -- servant authentication
    , servant-auth-server

    -- serialisation/markup
    , aeson
    , jose
    , servant-blaze
    , blaze-markup
    , blaze-html

    -- web
    , http-api-data

    -- DB/storage
    , stm
    , stm-containers
    , containers

    -- Characters
    , text

    -- Control
    , list-t
    , mtl
    , lens

    -- Server
    , wai
    , warp

    -- Logging
    , monad-log

library
  import: common-dependencies, lang-settings, common-extensions
  hs-source-dirs: src
  build-depends:
    -- Extra servant packages
      servant-auth
  exposed-modules:

      Prelude

      Prototype.Html

      Prototype.Server
      Prototype.Server.Auth

      Prototype.Types
      Prototype.Types.NonEmptyText
      Prototype.Types.Secret

      Prototype.Data.Examples
      Prototype.Pages.Home

      -- Permissions
      Prototype.ACL
      Prototype.ACL.Types

      -- Grantees of permissions
      Prototype.Grantee.Group

      -- Runtime and execution
      Prototype.Runtime
      Prototype.Runtime.StmDatabase

executable start-servant
  import: common-dependencies, lang-settings, common-extensions
  main-is:          serve.hs
  build-depends:
     -- our dependencies
     start-servant
  hs-source-dirs:   bin
  other-modules:
